--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
    <body>
       <header>
-         <h3>To <s>All</s> Some of the Pets I've Loved Before</h3>
+         <h3 id = "mainHeading">To <s>All</s> Some of the Pets I've Loved Before</h3>
      <h4>Cats</h4>
        <nav><ul><li><a href = #callieholly>Holly &amp; Callie</a> |</li>
          <li><a href = #nugget>Nugget</a> | </li>
@@ -102,7 +102,7 @@
 
       <article id = "pebbles">
       <h2>Pebbles</h2>
-      <p>Ah, Spring 2020. My wife and I were bored and in quarantine when we thought, "hey, since this thing may go on for a couple months, we should get a kitten!" As luck would have it, a friend of my sister's had a barn cat who had just delivered a litter of kittens who were in need of homes! My wife and I went to the farm and, guess what kind of kittens they had?? That's right, calico! Now, our reasoning behind getting a calico kitten this time was because they are more than likely female and we didn't want a male cat spraying everywhere. My wife first picked up a scared, timid little kitten and I (sometimes regretfully), said we should get the one that was a little more active. We brought the kitten home a couple weeks later and initially named her Tequila (Tiki for short). The name didn't stick. We then thought about Pickles, which lead us to Pebbles, and the name stuck. Pebbles is affectionately refered to as "Crackhead". Her hobbies include scaling walls, opening cat-proof containers to get food, helping me with coding, and bullying <a href="#kallie">Kallie</a> out of her food.</p>
+      <p class = "funParagraph" id="testP">Ah, Spring 2020. My wife and I were bored and in quarantine when we thought, "hey, since this thing may go on for a couple months, we should get a kitten!" As luck would have it, a friend of my sister's had a barn cat who had just delivered a litter of kittens who were in need of homes! My wife and I went to the farm and, guess what kind of kittens they had?? That's right, calico! Now, our reasoning behind getting a calico kitten this time was because they are more than likely female and we didn't want a male cat spraying everywhere. My wife first picked up a scared, timid little kitten and I (sometimes regretfully), said we should get the one that was a little more active. We brought the kitten home a couple weeks later and initially named her Tequila (Tiki for short). The name didn't stick. We then thought about Pickles, which lead us to Pebbles, and the name stuck. Pebbles is affectionately refered to as "Crackhead". Her hobbies include scaling walls, opening cat-proof containers to get food, helping me with coding, and bullying <a href="#kallie">Kallie</a> out of her food.</p>
       <figure>
          <img src="images\PEBBLES1.JPG" width="400" height="300">
          <figcaption>Pebbles, the adventurer.</figcaption>
